Fix header width, which caused horizontal scroll on mobile.

--- a/src/scss/scaffold.scss
+++ b/src/scss/scaffold.scss
@@ -23,14 +23,11 @@ a:hover {
 }
 
 #header {
-  width: 100%;
   margin: 0 0 15px 0;
   padding: 0;
 
   h1, h2 {
     display: block;
-    width: 100%;
-    min-width: 1082px;
     height: 10px;
     text-indent: -999em;
     margin: 0;
